--- a/index.html
+++ b/index.html
@@ -8,41 +8,47 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/normalize.css" />
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+    integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <title>cartes</title>
 </head>
 
 <body>
-  <header class ="firstblock">
+  <header class="firstblock">
 
     <div class="img">
       <img src="ohmyfood.png" alt="embleme">
     </div>
 
-    </header>
-<nav>
-      <form method="post" action="traitement.php">
+  </header>
+  <nav>
+    <form method="post" action="traitement.php">
 
       <div id="recherche">
-
         <div id="logo"><i class="fa-solid fa-location-dot"></i></div>
 
-        <div id="barre"><input type="text" name="pseudo" id="pseudo" value="Paris,Belleville" size="15" maxlength="10"
-            /></div>
-          <h1>Vous réservez le menu qui vous convient</h1>
-          <p>Découvrez des restaurants d'exceptions,sélectionnés par nos soins</p>
+        <div class="barre"><input type="text" name="pseudo" id="pseudo" value="Paris,Belleville"
+            size="15" maxlength="10" /></div>
+      </div>
+
+      <h1>Vous réservez le menu <br>qui vous convient</h1>
+      <p>Découvrez des restaurants d'exception,<br>sélectionnés par nos soins</p>
+      </div>
 
 
-        <button type="submit" name="action-rechercher" id="bouton">
-          <span class="rechercher">Explorez nos restaurants</span>
-             </button>
-           
-    </div>
-</form>
-</nav>
+
+      <button type="submit" name="action-rechercher" id="bouton">
+        <span class="rechercher">Explorez nos restaurants</span>
+      </button>
+
+    </form>
 
 
+  </nav>
+
+<section
 
 
 
